--- a/src/components/sections/Hero/hero.module.css
+++ b/src/components/sections/Hero/hero.module.css
@@ -45,6 +45,7 @@
   position: sticky;
   top: 0;
   height: 100vh;
+  height: 100dvh;
   width: 100%;
   display: flex;
   flex-direction: column;
